# agent-demo

./: .gitignore  README.md
api/: Dockerfile  README.md  main.py  pyproject.toml
api/app/: main.py
api/app/api/: routes.py
api/app/api/endpoints/: agent.py
api/app/core/: config.py  logging.py
api/app/services/: agent.py  scheduler.py
api/docs/: api.md
docker/: docker-compose.yml  nginx.conf
web/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/components/: ChatWidget.tsx
web/src/config/: api.ts
web/src/styles/: app.css  chat-widget.css  global.css
web/src/types/: chat.ts
