[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.117.1",
    "httpx[socks]>=0.28.1",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "openai>=1.109.0",
    "pydantic-settings>=2.10.1",
    "uvicorn[standard]>=0.37.0",
]
